--- a/BALLOON-TESTS/platformio.ini
+++ b/BALLOON-TESTS/platformio.ini
@@ -21,8 +21,8 @@ build_flags =
 	-DDEBUG_RP2040_CORE
 	-DDEBUG_RP2040_PORT=Serial
 lib_deps = 
-    https://github.com/RTU-HPR/Dev-Libraries#dev
-    robtillaart/MS5611@^0.3.9
+	https://github.com/RTU-HPR/Dev-Libraries#dev
+	robtillaart/MS5611@^0.3.9
 	adafruit/Adafruit SHTC3 Library@^1.0.1
 	mikalhart/TinyGPSPlus@^1.0.3
 	janelia-arduino/Array@^1.2.1
@@ -33,3 +33,4 @@ lib_deps =
 	yuriisalimov/NTC_Thermistor@^2.0.3
 	xreef/PCF8575 library@^1.1.1
 	adafruit/Adafruit BMP280 Library@^2.6.8
+	sparkfun/SparkFun u-blox GNSS Arduino Library@^2.2.25
