Integrated changes from tests into main code

--- a/BALLOON-NANO/platformio.ini
+++ b/BALLOON-NANO/platformio.ini
@@ -24,15 +24,11 @@ lib_deps =
     https://github.com/RTU-HPR/Dev-Libraries#dev
 	robtillaart/MS5611@^0.3.9
 	adafruit/Adafruit SHTC3 Library@^1.0.1
-	mikalhart/TinyGPSPlus@^1.0.3
 	janelia-arduino/Array@^1.2.1
 	jgromes/RadioLib@^6.2.0
 	closedcube/ClosedCube STS35@^2020.5.18
 	closedcube/ClosedCube I2C Driver@^2020.9.8
-	pololu/LSM6@^2.0.1
 	yuriisalimov/NTC_Thermistor@^2.0.3
-	../RANGING_LIB/
-	xreef/PCF8575 library@^1.1.1
 	adafruit/Adafruit BMP280 Library@^2.6.8
 	https://github.com/adafruit/Adafruit_LSM6DS
-
+	sparkfun/SparkFun u-blox GNSS Arduino Library@^2.2.25
