--- a/BALLOON-NANO/.vscode/settings.json
+++ b/BALLOON-NANO/.vscode/settings.json
@@ -1,17 +1,18 @@
 {
-  "cSpell.words": [
-    "averager",
-    "averagers",
-    "Cansat",
-    "RADIOLIB",
-    "trilaterate"
-  ],
-  "cmake.configureOnOpen": false,
-  "files.associations": {
-    "*.tcc": "cpp",
-    "unordered_map": "cpp",
-    "numeric": "cpp",
-    "ostream": "cpp",
-    "new": "cpp"
-  }
+    "cSpell.words": [
+        "averager",
+        "averagers",
+        "Cansat",
+        "loggable",
+        "RADIOLIB",
+        "trilaterate"
+    ],
+    "cmake.configureOnOpen": false,
+    "files.associations": {
+        "*.tcc": "cpp",
+        "unordered_map": "cpp",
+        "numeric": "cpp",
+        "ostream": "cpp",
+        "new": "cpp"
+    }
 }
