Fixed main code

--- a/BALLOON-NANO/platformio.ini
+++ b/BALLOON-NANO/platformio.ini
@@ -28,6 +28,6 @@ lib_deps =
 	closedcube/ClosedCube STS35@^2020.5.18
 	closedcube/ClosedCube I2C Driver@^2020.9.8
 	yuriisalimov/NTC_Thermistor@^2.0.3
-	adafruit/Adafruit BMP280 Library@^2.6.8
+	adafruit/Adafruit BMP085 Library
 	https://github.com/adafruit/Adafruit_LSM6DS
 	sparkfun/SparkFun u-blox GNSS Arduino Library@^2.2.25
