--- a/BALLOON-NANO/platformio.ini
+++ b/BALLOON-NANO/platformio.ini
@@ -20,8 +20,10 @@ build_flags =
 	-DPIO_FRAMEWORK_ARDUINO_ENABLE_EXCEPTIONS
 	-DDEBUG_RP2040_CORE
 	-DDEBUG_RP2040_PORT=Serial
+	-D RADIOLIB_WRAPPER_ENABLE
+	-D RANGING_WRAPPER_ENABLE
 lib_deps = 
-    https://github.com/RTU-HPR/Dev-Libraries#dev
+	https://github.com/RTU-HPR/Dev-Libraries
 	robtillaart/MS5611@^0.3.9
 	janelia-arduino/Array@^1.2.1
 	jgromes/RadioLib@^6.2.0
@@ -31,3 +33,4 @@ lib_deps =
 	adafruit/Adafruit BMP085 Library
 	https://github.com/adafruit/Adafruit_LSM6DS
 	sparkfun/SparkFun u-blox GNSS Arduino Library@^2.2.25
+	robtillaart/PCF8575@^0.1.10
