--- a/PFC/platformio.ini
+++ b/PFC/platformio.ini
@@ -14,6 +14,9 @@ board = pico
 framework = arduino
 board_build.core = earlephilhower
 board_build.filesystem_size = 1m
+; board_build.f_cpu = 285000000L
+; board_build.f_flash = 80000000L
+board_build.flash_mode = qio
 monitor_speed = 115200
 monitor_filters = default
 build_flags = 
@@ -26,6 +29,7 @@ build_flags =
   -D MS56XX_ENABLE
   -D ANALOG_VOLTAGE_READER_ENABLE
   -D SD_CARD_WRAPPER_ENABLE
+
   
 lib_deps = 
 	https://github.com/RTU-HPR/Dev-Libraries
